# QtLlama

./: CMakeLists.txt
cmake/: QtLlamaConfig.cmake.in
examples/helloWorld/: CMakeLists.txt  main.cpp
include/QtLlama/: Embedder.h  EmbeddingWorker.h  Engine.h  IEmbedder.h  IEngine.h  LlamaBackend.h  Session.h  Types.h
src/: Embedder.cpp  EmbeddingWorker.cpp  Engine.cpp  Session.cpp
